Mobile view Update

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,5 @@
 PORT=5000
 MONGO_URI=mongodb://localhost:27017/smartcart
 JWT_SECRET=tybscit_project_secret_key
+RAZORPAY_KEY_ID=your_razorpay_key_id_here
+RAZORPAY_KEY_SECRET=your_razorpay_key_secret_here
