--- a/server/package.json
+++ b/server/package.json
@@ -2,20 +2,20 @@
   "name": "smartcart-server",
   "version": "1.0.0",
   "description": "SmartCart MERN Stack Backend",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "seed": "node scripts/seedProducts.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
+    "cors": "^2.8.6",
     "crypto": "^1.0.1",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.6.1",
+    "express": "^4.22.1",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^7.3.1",
+    "mongoose": "^7.8.8",
     "razorpay": "^2.9.6"
   },
   "devDependencies": {
